# midi_validator

./: .gitignore  1.cmd  CMakeLists.txt  README.md  build_log.txt  check_all.bat  diagnostic.cmd  diagnostic_log.txt  main.cpp  run_build.cmd
midi_builder/: CMakeLists.txt  build.cmd  build_log.txt  demo.cpp  demo_two_instruments.cpp  midi_builder.hpp
src/: console_formatter.cpp  json_formatter.cpp  json_formatter.h  main.cpp  midi_analyzer.cpp  midi_analyzer.h  midi_channel_mode.h  midi_format2.cpp  midi_format2.h  midi_meta_events.h  midi_parser.cpp  midi_parser.h  midi_reader.cpp  midi_reader.h  midi_reader_sm.cpp  midi_reader_sm.h  midi_spec.h  midi_system_common.h  midi_types.h  midi_validator_extended.cpp  report_formatter.cpp  report_formatter.h  silent_formatter.cpp  silent_formatter.h
tests/: CMakeLists.txt  build_log.txt  dplcreator.cfg  generate.cpp  midi_generator.cpp  midi_generator.h  project.dpl.txt  run_patch.cmd  run_tests.cpp  test_framework.cpp  test_framework.h
